@@ -82,6 +82,8 @@
 	.btn-file input[type=file]{position:absolute;top:0;right:0;min-width:100%;min-height:100%;font-size:100px;text-align:right;filter:alpha(opacity=0);opacity:0;outline:none;background:white;cursor:inherit;display:block;}
 	.nav>li>a {padding:4px;padding-left:8px;padding-right:8px;}
 	.nav-tabs>li>a {border-radius:0px;}
+	.dashed {height:8px;border-width:2px;margin-left:2;border-bottom: thin black dashed;width:120px;display:inline-block;margin-top:3px;margin-bottom:3px;padding:0;}
+	.solid {height:8px;border-width:2px;margin-left:2;border-bottom: thin black solid;width:120px;display:inline-block;margin-top:3px;margin-bottom:3px;padding:0;}
 /*	.nav-tabs>li.active>a{background-color:#ddd;color:black;}
 */	/*.input-group-sm {margin:0;margin-bottom:3px;}*/
 
@@ -119,6 +121,20 @@
 		<li onclick=startarrow(clickedevent)>Start Arrow</li>
 		<hr>
 		<li onclick=addtext(clickedevent)>Add Text</li>
+		<hr>
+	</ul>
+	<ul id='colormenu'>
+		<li><span class='colorbox' style='background-color:#205946' onclick=change_color(clickedevent.target,'#205946')></span><span class='colorbox' style='background-color:#33836A' onclick=change_color(clickedevent.target,'#33836A')></span><span class='colorbox' style='background-color:#67c2a5' onclick=change_color(clickedevent.target,'#67c2a5')></span><span class='colorbox' style='background-color:#b7dfd1' onclick=change_color(clickedevent.target,'#b7dfd1')></span><span class='colorbox' style='background-color:#e2f2ed' onclick=change_color(clickedevent.target,'#e2f2ed')></span></span><span class='colorbox' style='background-color:#ffffff' onclick=change_color(clickedevent.target,'#ffffff')></span></li>
+		<li><span class='colorbox' style='background-color:#8e2a1d' onclick=change_color(clickedevent.target,'#8e2a1d')></span><span class='colorbox' style='background-color:#c63f26' onclick=change_color(clickedevent.target,'#c63f26')></span><span class='colorbox' style='background-color:#f58c63' onclick=change_color(clickedevent.target,'#f58c63')></span><span class='colorbox' style='background-color:#fbcdbb' onclick=change_color(clickedevent.target,'#fbcdbb')></span><span class='colorbox' style='background-color:#fef1eb' onclick=change_color(clickedevent.target,'#fef1eb')></span></span><span class='colorbox' style='background-color:#000000' onclick=change_color(clickedevent.target,'#000000')></span></li>
+		<li><span class='colorbox' style='background-color:#24385B' onclick=change_color(clickedevent.target,'#24385B')></span><span class='colorbox' style='background-color:#3F578C' onclick=change_color(clickedevent.target,'#3F578C')></span><span class='colorbox' style='background-color:#8c9fca' onclick=change_color(clickedevent.target,'#8c9fca')></span><span class='colorbox' style='background-color:#ccdaf0' onclick=change_color(clickedevent.target,'#ccdaf0')></span><span class='colorbox' style='background-color:#f1f3f9' onclick=change_color(clickedevent.target,'#f1f3f9')></span></span><span class='colorbox' style='background-color:#a3a3a3' onclick=change_color(clickedevent.target,'#a3a3a3')></span></li>
+		<li><span class='colorbox' style='background-color:#e78ac3' onclick=change_color(clickedevent.target,'#e78ac3')></span><span class='colorbox' style='background-color:#a6d854' onclick=change_color(clickedevent.target,'#a6d854')></span><span class='colorbox' style='background-color:#ffd92f' onclick=change_color(clickedevent.target,'#ffd92f')></span><span class='colorbox' style='background-color:#e5c494' onclick=change_color(clickedevent.target,'#e5c494')></span><span class='colorbox' style='background-color:#ece9e8' onclick=change_color(clickedevent.target,'#ece9e8')></span></span><span class='colorbox' style='background-color:#c3c3c3' onclick=change_color(clickedevent.target,'#c3c3c3')></span></li>	
+	</ul>
+</div>
+
+<div class="contextMenuContainer" id='path_context_menu'>
+	<ul class="contextMenu">
+		<li><span class='solid' onclick=dash_line(clickedevent.target,0)></span></li>
+		<li><span class='dashed' onclick=dash_line(clickedevent.target,1)></span></li>
 		<hr>
 	</ul>
 	<ul id='colormenu'>
@@ -1261,6 +1277,12 @@ $(function() {
 				$("#data_context_menu").css("top", e.clientY);
 				$("#data_context_menu").fadeIn(50, FocusContextOut());
 				doubleClicked = true;
+			} else if(e.target.nodeName=='path'){
+				clickedevent=e
+				e.preventDefault();
+				$("#path_context_menu").css("left", e.clientX+3);
+				$("#path_context_menu").css("top", e.clientY);
+				$("#path_context_menu").fadeIn(50, FocusContextOut());
 			} else {
 				clickedevent=e
 				e.preventDefault();
@@ -1374,6 +1396,16 @@ function change_color(target,color) {
 			group=item.attr('group')
 			snapobj.selectAll("[group='"+group+"']").attr({fill:color,stroke:color})
 		}
+	}
+}
+
+function dash_line(target,attribute) {
+	var item=Snap(target)
+	if (attribute==0){
+		item.attr({'stroke-dasharray':[]})
+	}
+	if (attribute==1){
+		item.attr({'stroke-dasharray':[3,3]})
 	}
 }
 
@@ -1600,7 +1632,6 @@ function importsettings() {
 // })
 
 function highlight_element(ev) {
-	console.log(ev.target.attributes)
 	// this should handle basically every case of mousing over a data element and getting a highlight effect
 	try{if(ev.target.nodeName=='path'){
 		item=Snap(ev.target)
